# worldbench

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  worldbench.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  roadmap_task.md  test-worldbench.yml
.github/workflows/: publish.yml  tests.yml
artifacts/: frame_freeze_benchmark.json  temporal_scramble_benchmark.json
artifacts/checkpoint_validation/: baseline_batch_result.json  baseline_inference_runtime.json  candidate_batch_result.json  candidate_inference_runtime.json  checkpoint_metadata.json  comparison_summary.json  config_compatibility.json  engineering_gate_result.json  lerobot_backend.json  provenance.json  status.json  strict_gate_result.json
artifacts/nanowm_rt1_cpu_pilot/: README.md  baseline_result.json  candidate_result.json  gate.json  manifest.json
artifacts/real_model_eval/: nanowm_rt1_episode0.json
benchmarks/action_mismatch/episode_001/: metadata.json
benchmarks/object_disappears/episode_001/: metadata.json
benchmarks/pre_contact_motion/episode_001/: metadata.json  states.json
benchmarks/push_cube/episode_001/: metadata.json
benchmarks/temporal_flicker/episode_001/: actions.json  metadata.json
docs/: CASE_STUDIES.md  CI_INTEGRATION.md  CLI.md  DATA_FORMAT.md  LAUNCH_CHECKLIST.md  LEROBOT.md  METRIC_VALIDATION.md  MIGRATION_V0_4.md  NANOWM_RT1.md  PYTHON_API.md  ROADMAP.md  SAVED_VIDEO_EVALUATION.md  checkpoint_regression.md  checkpoint_validation.md  demo_video_guide.md  metric_support.md  publishing.md  real_data_validation.md  real_model_evaluation.md  release_checklist.md  release_notes_0.3.0.md  release_notes_0.4.0.md  release_notes_0.4.1.md  release_notes_v0.1.0.md  roadmap.md
docs/development/: SYNTHETIC_FIXTURES.md  SYNTHETIC_VIDEO_GUIDE.md
examples/: basic_usage.py  compare_models.py  custom_metric.py  import_lerobot_style.py  quickstart.py  run_benchmark.py
examples/colab/: worldbench_saved_video_demo.ipynb
examples/demo_dataset/episode_001/: actions.json  metadata.json  states.json
examples/demo_dataset/episode_002/: actions.json  metadata.json  states.json
examples/github-actions/: worldbench-gate.yml
examples/lerobot_push_cube/episode_001/: actions.json  metadata.json  states.json
examples/nanowm_rt1/: README.md  example_manifest.json  prepare_worldbench_inputs.py
examples/sample_reports/: bad_model_report.md  good_model_report.md
scripts/: make_demo_video.py  make_screenshots.py  nanowm_checkpoint_validation_kaggle.py
scripts/dev/: make_demo_video.py  make_screenshots.py  make_synthetic_fixture.py
tests/: test_action_consistency_unavailable.py  test_checkpoint_regression.py  test_cli.py  test_cli_lerobot.py  test_config_gate.py  test_dashboard.py  test_dataset.py  test_evaluator.py  test_frame_freeze.py  test_lerobot.py  test_lerobot_integration.py  test_metrics.py  test_nanowm_rt1_adapter.py  test_object_contact_unavailable.py  test_saved_video_cli.py  test_temporal_scramble.py
website/: README.md  index.html  package-lock.json  package.json  script.js  styles.css  vercel.json
website/scripts/: build.mjs
worldbench/: __init__.py  cli.py  config.py  core.py  dashboard.py  dataset.py  schemas.py  utils.py  version.py
worldbench/backends/: __init__.py  benchmark.py  demo.py  frame_freeze.py  frame_scramble.py  lerobot.py  local.py
worldbench/metrics/: __init__.py  action_consistency.py  contact.py  object_permanence.py  temporal.py  visual.py
worldbench/runners/: __init__.py  benchmark.py  comparator.py  evaluator.py  regression.py  reporter.py  video.py
