[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldbench"
version = "0.1.0"
description = "Control-aware evaluation toolkit for robotics world models."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "WorldBench contributors" }
]
keywords = [
  "robotics",
  "world-models",
  "evaluation",
  "benchmarking",
  "simulation",
  "computer-vision",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=1.23",
  "pillow>=9.5",
  "pydantic>=2.0",
  "rich>=13.0",
  "click>=8.0",
]

[project.optional-dependencies]
vision = ["scikit-image>=0.21"]
dev = ["pytest>=8.0", "ruff>=0.8"]
video = ["imageio>=2.34", "imageio-ffmpeg>=0.5"]
lerobot = ["lerobot"]

[project.urls]
Changelog = "https://github.com/tigee1311/worldbench/blob/main/CHANGELOG.md"
Documentation = "https://github.com/tigee1311/worldbench#readme"
Homepage = "https://github.com/tigee1311/worldbench"
Issues = "https://github.com/tigee1311/worldbench/issues"
Repository = "https://github.com/tigee1311/worldbench"

[project.scripts]
worldbench = "worldbench.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["worldbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not integration'"
markers = [
  "integration: downloads public LeRobot datasets from Hugging Face",
]
